kube/app-ingress-http.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.eomcs.com
        - auth.eomcs.com
        - board.eomcs.com
      secretName: app-ingress-tls
  rules:
    - host: api.eomcs.com
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-server-service
                port:
                  number: 80
          - path: /board
            pathType: Prefix
            backend:
              service:
                name: board-server-service
                port:
                  number: 80
    - host: auth.eomcs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-ui-service
                port:
                  number: 80
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-ui-service
                port:
                  number: 80
          - path: /members
            pathType: Prefix
            backend:
              service:
                name: auth-ui-service
                port:
                  number: 80
          - path: /_next/
            pathType: Prefix
            backend:
              service:
                name: auth-ui-service
                port:
                  number: 80           
    - host: board.eomcs.com
      http:
        paths:                       
          - path: /boards
            pathType: Prefix
            backend:
              service:
                name: board-ui-service
                port:
                  number: 80
          - path: /_next/
            pathType: Prefix
            backend:
              service:
                name: board-ui-service
                port:
                  number: 80
